fix: created the classification controller to isolate classificaiton functions
